--- a/.gitignore
+++ b/.gitignore
@@ -159,7 +159,13 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# code
 .vscode/
 .vscode/*
 .vs/
 .vs/*
+
+# yolo
+datasets/
+runs/
+
